Removed backface-visibility from body and added to scroll container. This fixes display issues in FF 15+ #1

--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,6 @@
 }
 
 html, body {
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    backface-visibility: hidden;
     font-family: Consolas, monospace;
     background: #f2f2f2;
     padding: 0;
